@@ -4,6 +4,7 @@
  * 
  * Known bugs:
  * - Refresh button off the panel on elementary OS with elementary OS theme (aka. Fixed refreshbutton placement for some themes)
+ * - Users of removed favorite-providers don't get deleted
  *
  * Planned features:
  * - show duration a stream is online in panel (?)
@@ -118,7 +119,7 @@ exports.setChannels = function(source,channelNames,rich) {
     // check for removed channels
     for(var channel in data.channels) {
         if(!this.exactArraySearch(channelNames,channel,rich)) {
-            if(this.onlySourceSet(source.name,channel)) {
+            if(this.onlySourceSet(source.type,channel)) {
                 this.onChannelRemove(channel);
                 delete data.channels[channel];
             }
@@ -129,8 +130,19 @@ exports.setChannels = function(source,channelNames,rich) {
                     if(!this.exactArraySearch(data.users,data.channels[channel].sources.usernames[username],false))
                         data.channels[channel].sources.usernames.splice(username,1);
                 }
+           }
+        }
+        else if(source.type=='username') {
+            for(var username in data.channels[channel].sources.usernames) {
+                if(!this.exactArraySearch(data.users,data.channels[channel].sources.usernames[username],false)) {
+                    if(this.onlySourceSet(source.type,channel)) {
+                        this.onChannelRemove(channel);
+                        delete data.channels[channel];
+                    }
+                    else
+                        data.channels[channel].sources.usernames.splice(username,1);
+                }
             }
-                
         }
     }
 };
@@ -159,6 +171,11 @@ exports.addChannel = function(channel,source) {
 exports.onChannelRemove = function(channel) {
     if(data.channels[channel].isLive) {
         livePanel.port.emit('remove',data.channels[channel].names[0]);
+            
+        if(panelButton.contentURL == self.data.url("panel_icon.png")&&!this.liveStatus()) {
+            panelButton.contentURL = self.data.url("panel_icon_empty.png");
+            panelButton.tooltip = _("live_panel_label_offline");
+        }
     }
 };
 
@@ -219,11 +236,6 @@ exports.getLoginName = function() {
     }
 };
 
-exports.getChannelsOfUser = function(username,source) {
-    var options = {'name':username,'type':source};
-    this.checkRateLimit(options,exports.getUserFavorites);
-};
-
 exports.getUserFavorites = function(source) {
     var favoritesRequest = Request({
         url: 'http://api.justin.tv/api/user/favorites/'+source.name+'.json',
@@ -238,18 +250,21 @@ exports.getChannelDetails = function(source) {
     var detailRequest = Request({
         url: 'http://api.justin.tv/api/channel/show/'+source.channel+'.json',
         onComplete: function (response) {
-            exports.addChannel(response.json,source);
+            if(!response.json.error)
+                exports.addChannel(response.json,source);
         }
     });
     detailRequest.get();
 };
 
 exports.extractChannelsFromFavorites = function(source,response) {
-    var channelNames = [];
-    for(var channel of response) {
-        channelNames.push(channel);
+    if(response.length>0) {
+        var channelNames = [];
+        response.forEach(function(channel) {
+            channelNames.push(channel);
+        });
+        this.setChannels(source,channelNames,true);
     }
-    this.setChannels(source,channelNames,true);
 };
 
 exports.channelExists = function(channelName) {
@@ -272,16 +287,18 @@ exports.exactArraySearch = function(array, string, rich) {
 };
 
 exports.onlySourceSet = function(sourceName,channel) {
-    var sourcePropertyName = sourceName+'Set';
+    var suc,sourcePropertyName = sourceName+'Set';
     for(var source in data.channels[channel].sources) {
         if(source!=sourcePropertyName&&data.channels[channel].sources[source]&&typeof data.channels[channel].sources[source]=='boolean')
             return false;
-        else if(typeof data.channels[channel].sources[source] == 'object'&&(data.channels[channel].sources[source] instanceof Array)) {
-            for(var item of data.channels[channel].sources[source]) {
-                if(item!=sourceName) {
+        else if(Array.isArray(data.channels[channel].sources[source])) {
+            suc = data.channels[channel].sources[source].every(function(item) {
+                if(item!=sourceName)
                     return false;
-                }
-            }
+                return true;
+            });
+            if(!suc)
+                return suc;
         }
     }
     return true;
@@ -320,6 +337,7 @@ exports.createQuery = function(channel) {
 
 exports.checkStatus = function(results,channel) {
     try {
+        console.log("trying to modify "+channel);
         var result = results.json;
         if(result.length>0&&!data.channels[channel].isLive) {
             data.channels[channel].isLive = true;
@@ -338,30 +356,27 @@ exports.checkStatus = function(results,channel) {
                 panelButton.tooltip = _("live_widget_label");
             }
         }
-        else if(data.channels[channel].title!=result[0].title&&result.length>0&&data.channels[channel].isLive) {
-            data.channels[channel].title = result[0].title;
-            data.channels[channel].image[0] = result[0].channel.image_url_tiny;
-            data.channels[channel].image[1] = result[0].channel.image_url_medium;
-            
-            if(!data.channels[channel].mute&&prefs.titleChangeNotification)
-				this.sendNotification(result[0].title,result[0].channel.image_url_medium,channel,true)
+        else if(result.length>0&&data.channels[channel].isLive) {
+            if(data.channels[channel].title!=result[0].title) {
+                data.channels[channel].title = result[0].title;
+                data.channels[channel].image[0] = result[0].channel.image_url_tiny;
+                data.channels[channel].image[1] = result[0].channel.image_url_medium;
+                
+                if(!data.channels[channel].mute&&prefs.titleChangeNotification)
+                    this.sendNotification(result[0].title,result[0].channel.image_url_medium,channel,true);
+            }
         }
         else if(!result.length&&data.channels[channel].isLive) {
+            this.onChannelRemove(channel);
+        
             data.channels[channel].isLive = false;
             
             if(!data.channels[channel].mute&&prefs.offlineNotification)
 				this.sendNotification( data.channels[channel].title, data.channels[channel].image[1],channel,false);
-            
-            livePanel.port.emit('remove',data.channels[channel].names[0]);
-            
-            if(panelButton.contentURL == self.data.url("panel_icon.png")&&!this.liveStatus()) {
-                panelButton.contentURL = self.data.url("panel_icon_empty.png");
-                panelButton.tooltip = _("live_panel_label_offline");
-            }
         }
     }
     catch(e) {
-        // nothing to catch here
+        console.log(e);
     }
 };
 
