@@ -6,7 +6,7 @@ onlineNotification=%s is live!
 offlineNotification=%s went offline!
 
 updateInterval_title=Update Interval
-updateInterval_description=The interval of the addon checking wether a stream is live in seconds. When 0, the states aren't automatically updated.
+updateInterval_description=Interval of the addon checking wether a stream is live in seconds. When 0, the states aren't automatically updated.
 channelList_title=Channels
 channelList_description=Comma sparated list of the usernames of the channels to monitor.
 usernameList_title=Users
